[wheel]
universal = 1


[metadata]
requires-dist =
        tencentcloud-sdk-python
        fire


[check-manifest]
ignore =
    .github
    .github/*
    .dependabot
    .dependabot/*
    .coveragerc
    CHANGELOG.rst
    CONTRIBUTING.md
    .travis.yml
    requirements*
    tox.ini
    .changes
    .changes/*
    tests
    tests/*
    scripts
    scripts/*
    doc
    doc/*